Bugfixes and performance improvements.
- Fixed #30, jump strength does not appear to be added.
- Better handling of invalid syntax with the /race command.
- Started handling of races via singular yml file for ease of use & expandability.